--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,9 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
+# server 
+server/.DS_Store
+server/node_modules
+
 # compiled output
 /dist
 /tmp
