--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
+    "@types/jquery": "^3.3.33",
+    "jquery": "^3.4.1",
+    "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
