--- a/package.json
+++ b/package.json
@@ -15,16 +15,17 @@
     "@angular/common": "~9.1.0-next.1",
     "@angular/compiler": "~9.1.0-next.1",
     "@angular/core": "~9.1.0-next.1",
+    "@angular/fire": "^5.4.2",
     "@angular/forms": "~9.1.0-next.1",
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
-    "@types/jquery": "^3.3.33",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "firebase": ">= 5.5.7 <8"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0-next.0",
@@ -45,6 +46,11 @@
     "protractor": "~5.4.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
-    "typescript": "~3.7.5"
+    "typescript": "~3.7.5",
+    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "firebase-tools": "^7.12.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1"
   }
 }
