--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~9.1.0-next.1",
     "@angular/platform-browser-dynamic": "~9.1.0-next.1",
     "@angular/router": "~9.1.0-next.1",
+    "@types/jquery": "^3.3.33",
     "firebase": "^7.10.0",
     "jquery": "^3.4.1",
     "materialize-css": "^1.0.0-rc.2",
