--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     },
     "devDependencies": {
         "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
-        "@angular-devkit/build-angular": "~0.901.0-next.0",
+        "@angular-devkit/build-angular": "^0.901.0",
         "@angular/cli": "~9.1.0-next.0",
         "@angular/compiler-cli": "~9.1.0-next.1",
         "@angular/language-service": "~9.1.0-next.1",
