--- a/package.json
+++ b/package.json
@@ -20,16 +20,16 @@
     "@angular/platform-browser": "~9.1.9",
     "@angular/platform-browser-dynamic": "~9.1.9",
     "@angular/router": "~9.1.9",
-    "@types/jquery": "^3.3.33",
-    "firebase": "^7.6.0",
-    "jquery": "^3.4.1",
-    "materialize-css": "^1.0.0-rc.2",
-    "rxjs": "~6.5.4",
-    "tslib": "^1.10.0",
+    "@types/jquery": "^3.3.38",
+    "firebase": "^7.15.0",
+    "jquery": "^3.5.1",
+    "materialize-css": "^1.0.0",
+    "rxjs": "^6.5.5",
+    "tslib": "^1.13.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/architect": "<0.900 || ^0.900.0-0 || ^9.0.0-0",
+    "@angular-devkit/architect": "^0.900.7",
     "@angular-devkit/build-angular": "^0.901.7",
     "@angular/cli": "~9.1.7",
     "@angular/compiler-cli": "~9.1.9",
@@ -37,8 +37,8 @@
     "@types/jasmine": "~3.3.8",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
-    "codelyzer": "^5.0.0",
-    "firebase-tools": "^7.12.0",
+    "codelyzer": "^5.2.2",
+    "firebase-tools": "^7.16.2",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
@@ -48,8 +48,8 @@
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-jasmine": "~2.0.1",
-    "karma-jasmine-html-reporter": "^1.4.0",
-    "protractor": "~5.4.0",
+    "karma-jasmine-html-reporter": "^1.5.4",
+    "protractor": "^5.4.4",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
     "typescript": "~3.7.5"
