--- a/.gitignore
+++ b/.gitignore
@@ -12,7 +12,7 @@ server/node_modules
 /bazel-out
 
 # dependencies
-/node_modules
+/frontend/node_modules
 
 # profiling files
 chrome-profiler-events*.json
